--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+	<title> Daniel Morrison's Website </title>
+	<link src='style.css' rel='stylesheet' type='text/css'>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+	<h1> Daniel Morrison </h1>
+	<nav>
+		<a> <strong>Home</strong> </a>
+		<a href=cv.html> CV </a>
+	</nav>
+
+	<h3> Bio </h3>
+	<p>
+		I graduated from the University of Wisconsin - La Crosse in 2018 with a B.S. in Physics and Math, and minors in Economics and Computer Science. In the fall I will be attending UC-Irvine as a graduate student.
+	</p>
 </body>
+
 </html>
