--- a/cv.html
+++ b/cv.html
@@ -11,7 +11,8 @@
 		<a href='index.html'> Home </a>
 		<a> <strong>CV</strong> </a>
 	</nav>
-	<embed src='./files/Daniel_Morrison_CV.pdf' width=80%>
+	<embed src='./files/Daniel_Morrison_CV.pdf' width=80% height=24in>
+	<a href='./files/Daniel_Morrison_CV.pdf'> Download CV </a>
 </body>
 
 </html>
