--- a/cv.html
+++ b/cv.html
@@ -11,8 +11,11 @@
 		<a href='index.html'> Home </a>
 		<a> <strong>CV</strong> </a>
 	</nav>
-	<embed src='./files/Daniel_Morrison_CV.pdf' type="pdf" width="700px" height="1400px">
-	<a href='./files/Daniel_Morrison_CV.pdf'> Download CV </a>
+	<embed src='./files/Daniel_Morrison_CV.pdf' type="pdf" width="800px" height="1400px">
+
+	<div>
+		<a href='./files/Daniel_Morrison_CV.pdf'> Download CV </a>
+	</div>
 </body>
 
 </html>
