--- a/cv.html
+++ b/cv.html
@@ -11,7 +11,7 @@
 		<a href='index.html'> Home </a>
 		<a> <strong>CV</strong> </a>
 	</nav>
-	<embed src='./files/Daniel_Morrison_CV.pdf' type="application/pdf" width="800px" height="1500px">
+	<embed src='./files/Daniel_Morrison_CV.pdf' width="800px" height="1500px">
 
 	<div>
 		<a href='./files/Daniel_Morrison_CV.pdf'> Download CV </a>
