--- a/cv.html
+++ b/cv.html
@@ -11,7 +11,7 @@
 		<a href='index.html'> Home </a>
 		<a> <strong>CV</strong> </a>
 	</nav>
-	<embed src="./files/Daniel_Morrison_CV" width="500" height="375" type='application/pdf'>
+	<object data="./files/Daniel_Morrison_CV" width="800" height="1500" type="application/pdf"></object>
 	<div>
 		<a href='./files/Daniel_Morrison_CV.pdf'> Download CV </a>
 	</div>
