--- a/cv.html
+++ b/cv.html
@@ -8,13 +8,11 @@
 <body>
 	<h1> Daniel Morrison </h1>
 	<nav>
-		<a href='index.html'> Home </a>
-		<a> <strong>CV</strong> </a>
+		<a href='index.html'> <strong>Home</strong> </a>
+		<a href='cv.html' class='sel'> <strong>CV</strong> </a>
 	</nav>
+	<h3> CV <a href='./files/Daniel_Morrison_CV.pdf'> (Download) </a> </h3>
 	<embed src="./files/Daniel_Morrison_CV.pdf" type="application/pdf" width="80%" height="1000px">
-	<div>
-		<a href='./files/Daniel_Morrison_CV.pdf'> Download CV </a>
-	</div>
 </body>
 
 </html>
