--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <body>
 	<h1> Daniel Morrison </h1>
 	<nav>
-		<a> <strong>Home</strong> </a>
-		<a href=cv.html> CV </a>
+		<a href=index.html class='sel'> <strong>Home</strong> </a>
+		<a href=cv.html> <strong>CV</strong> </a>
 	</nav>
 
 	<h3> Bio </h3>
 	<p>
-		I graduated from the University of Wisconsin - La Crosse in 2018 with a B.S. in Physics and Math, and minors in Economics and Computer Science. In the fall I will be attending UC-Irvine as a graduate student.
+		I graduated from the University of Wisconsin - La Crosse in 2018 with a B.S. in Physics and Math and minors in Economics and Computer Science. In the fall I will be attending UC-Irvine as a graduate student.
 	</p>
 </body>
 
