--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 	<p>
 		I graduated from the University of Wisconsin - La Crosse in 2018 with a B.S. in Physics and Math and minors in Economics and Computer Science. In the fall I will be attending UC-Irvine as a graduate student.
 	</p>
+
+	<h3> Hanging Picture Problem Simulation </h3>
+	<p> I have written a program in Processing to simulate solutions to the Hanging Picture Problem.
+		<a href='./files/Nail Problem Simulation'> (Download) </a>
+	</p>
 </body>
 
 </html>
