Update with current info

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 	<h1> Daniel Morrison </h1>
 	<nav>
 		<a href=index.html class='sel'> <strong>Home</strong> </a>
-		<a href=cv.html> <strong>CV</strong> </a>
+<!--		<a href=cv.html> <strong>CV</strong> </a> -->
 	</nav>
 
 	<h3> Bio </h3>
 	<p>
-		I graduated from the University of Wisconsin - La Crosse in 2018 with a B.S. in Physics and Math and minors in Economics and Computer Science. In the fall I will be attending UC-Irvine as a graduate student.
+		I graduated from the University of Wisconsin - La Crosse in 2018 with a B.S. in Physics and Math and minors in Economics and Computer Science and completed my PhD in math at the University of California - Irvine in June 2024.
 	</p>
 
 	<h3> Hanging Picture Problem Simulation </h3>
