Add problem description

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 		I graduated from the University of Wisconsin - La Crosse in 2018 with a B.S. in Physics and Math and minors in Economics and Computer Science and completed my PhD in math at the University of California - Irvine in June 2024.
 	</p>
 
-	<h3> Hanging Picture Problem Simulation </h3>
+	<h3> Hanging Picture Problem </h3>
+	<p> Problem Description: <a href="./files/Nail Problem"> (Download) </a>
+	</p>
 	<p> I have written a program in Processing to simulate solutions to the Hanging Picture Problem.
 		<a href='./files/Nail Problem Simulation.zip'> (Download) </a> (Windows Java 32 bit)
 	</p>
