--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</p>
 
 	<h3> Hanging Picture Problem </h3>
-	<p> Problem Description: <a href="./files/Nail Problem"> (Download) </a>
+	<p> Problem Description: <a href="./files/Nail Problem.pdf"> (Download) </a>
 	</p>
 	<p> I have written a program in Processing to simulate solutions to the Hanging Picture Problem.
 		<a href='./files/Nail Problem Simulation.zip'> (Download) </a> (Windows Java 32 bit)
