--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 	<h3> Hanging Picture Problem </h3>
 	<p> Problem Description:
-		<a href='./files/Nail Problem.pdf'> (Download) </a>
+		<a href='./files/Nail_Problem.pdf'> (Download) </a>
 	</p>
 	<p> I have written a program in Processing to simulate solutions to the Hanging Picture Problem.
 		<a href='./files/Nail Problem Simulation.zip'> (Download) </a> (Windows Java 32 bit)
