--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
 
 	<h3> Hanging Picture Problem </h3>
 	<p> Problem Description:
-		<a href='./files/Nail_Problem.pdf'> (Download) </a>
+		<a href='./files/Nail Problem.pdf'> (Download) </a>
 	</p>
 	<p> I have written a program in Processing to simulate solutions to the Hanging Picture Problem.
 		<a href='./files/Nail Problem Simulation.zip'> (Download) </a> (Windows Java 32 bit)
+
+		Directions: Set the number of nails you want using the slider in the top right. Then click and drag to draw a wire. Release to start the physics simulation, and wait for it to stop moving. Hit a number key 1-9 according to the nail you want to remove, starting with 1 on the left. Start drawing a new wire to reset the simulation.
 	</p>
 </body>
 
