--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<h1> Daniel Morrison </h1>
 	<nav>
 		<a href=index.html class='sel'> <strong>Home</strong> </a>
-<!--		<a href=cv.html> <strong>CV</strong> </a> -->
+		<a href=resume.html> <strong>Resume</strong> </a>
 	</nav>
 
 	<h3> Bio </h3>
